Ajusted Tire tests